--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "developer-portfolio",
-  "homepage": "https://real1900.github.io/apportunity",
+  "homepage": "https://apportunity.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
