--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build
-      run: npm install
+      run: yarn install
 
     - name: Test
       run: npm run test
