--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Build
       run: yarn install
 
-    - name: Test
-      run: yarn run test
+    # - name: Test
+    #   run: yarn run test
 
     - name: Deploy
       run: |
