--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Developer Portfolio",
-  "name": "Developer Portfolio template by hhhrrrttt222111",
+  "short_name": "Apportunity.io",
+  "name": "Your app, your opportunity",
   "icons": [
     {
       "src": "favicon.ico",
