--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-fast-marquee": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-markdown": "^8.0.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.5",
+    "remark-gfm": "^3.0.1",
     "slick-carousel": "^1.8.1",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
