--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "and": "^0.0.3",
     "axios": "^0.21.1",
     "framer-motion": "^7.5.3",
     "gh-pages": "^4.0.0",
@@ -27,8 +28,10 @@
     "react-transition-group": "^4.4.5",
     "remark-gfm": "^3.0.1",
     "slick-carousel": "^1.8.1",
+    "start": "^5.1.0",
     "validator": "^13.6.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "predeploy": "npm run build",
