--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "and": "^0.0.3",
     "axios": "^0.21.1",
+    "feed-reader": "^6.1.2",
     "framer-motion": "^7.5.3",
     "gh-pages": "^4.0.0",
     "markdown-to-jsx": "^7.1.7",
