--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "feed-reader": "^6.1.2",
     "framer-motion": "^7.5.3",
     "gh-pages": "^4.0.0",
+    "html-react-parser": "^3.0.4",
+    "jquery": "^3.6.1",
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
