--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "developer-portfolio",
+  "name": "apportunity",
   "homepage": "https://apportunity.io",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +15,6 @@
     "framer-motion": "^7.5.3",
     "gh-pages": "^4.0.0",
     "html-react-parser": "^3.0.4",
-    "jquery": "^3.6.1",
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
