--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-markdown": "^8.0.3",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.2",
     "react-router-hash-link": "^2.4.3",
