--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-react-parser": "^3.0.4",
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.2.0",
+    "react-calendly": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.2.1",
     "react-helmet": "^6.1.0",
