--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.2.0",
     "react-calendly": "^4.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.2.1",
     "react-helmet": "^6.1.0",
