--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.5",
+    "react-web-media-player": "^1.1.6",
     "remark-gfm": "^3.0.1",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
