--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "validator": "^13.6.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.19"
   },
