--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "homepage": "https://apportunity.io",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://feeds.feedburner.com/",
+  "proxy":"https://feeds.feedburner.com/",
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
