--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "homepage": "https://apportunity.io",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://feeds.feedburner.com/",
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
@@ -11,11 +10,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "and": "^0.0.3",
-    "axios": "^0.21.1",
     "feed-reader": "^6.1.2",
     "framer-motion": "^7.5.3",
     "gh-pages": "^4.0.0",
     "html-react-parser": "^3.0.4",
+    "http-proxy-middleware": "^2.0.6",
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.2.0",
     "react-calendly": "^4.1.0",
