--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "and": "^0.0.3",
+    "axios": "^1.2.1",
+    "buffer": "^6.0.3",
     "feed-reader": "^6.1.2",
     "framer-motion": "^7.5.3",
     "gh-pages": "^4.0.0",
@@ -31,11 +33,13 @@
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.5",
     "react-web-media-player": "^1.1.6",
+    "react-xml-parser": "^1.1.8",
     "remark-gfm": "^3.0.1",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1",
+    "xml-js": "^1.6.11",
     "yarn": "^1.22.19"
   },
   "scripts": {
