--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "remark-gfm": "^3.0.1",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
+    "stream": "^0.0.2",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1",
     "xml-js": "^1.6.11",
