--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-calendly": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.2.1",
+    "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-markdown": "^8.0.3",
