--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -13,6 +13,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build
+      env:
+        NODE_ENV: ${{ secrets.NODE_ENV }}
+    
       run: yarn install
 
     # - name: Test
